# oh-my-tab

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  TODO.md  package-lock.json  package.json  vite.config.ts
notes/: window-activation-approaches.md
src/: event_monitor.rs  index.html  main.rs  main.ts  styles.css  window_collector.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: event_monitor.rs  lib.rs  main.rs  permissions.rs  switcher.rs  window_collector.rs
