[package]
name = "oh-my-tab"
version = "0.1.0"
description = "macOS multi-task switcher with Windows 11 style overlay"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
base64 = "0.22"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
